Bug 331386 - After resume from standby, the contact list reconnects, even when status was offline.
Summary: After resume from standby, the contact list reconnects, even when status was ...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.7.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-21 15:33 UTC by Thomas Van Parys
Modified: 2014-02-25 22:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Van Parys 2014-02-21 15:33:03 UTC
When you set the contact list status to "offline", it correctly disconnects from all services.
When you put your laptop in standy or hibernate however, it will always reconnect and set itself to "available".

The option "Restore last presence on login" does not affect the situation.

Reproducible: Always

Steps to Reproduce:
1. set contact list status to offline
2. put laptop in standby mode
3. wake up laptop
4. Wait till wireless connection reconnects
Actual Results:  
Telepathy contact list will reconnect all enabled accounts and assume status "available"

Expected Results:  
Telepathy contact list should remain in offline mode.
Comment 1 David Edmundson 2014-02-25 22:45:21 UTC
Git commit f730507fa460964a315169d8f3d926f40c906f6a by David Edmundson.
Committed on 25/02/2014 at 22:44.
Pushed by davidedmundson into branch 'master'.

Avoid ever bringing offline accounts online

Reviewed-by: Martin Klapetek

M  +1    -3    telepathy-module.cpp

http://commits.kde.org/telepathy-kded-module/f730507fa460964a315169d8f3d926f40c906f6a