Avoid ever bringing offline accounts online

Reviewed-by: Martin Klapetek
BUG: 331386